[gd_scene load_steps=3 format=3 uid="uid://b4ps2brqgls7o"]

[ext_resource type="Theme" uid="uid://bp7tyi4g3un7a" path="res://themes/default.tres" id="1_8sx38"]
[ext_resource type="Script" uid="uid://c1w1jsfugyod4" path="res://src/projects/partial/partial.gd" id="2_1t1cb"]

[node name="Partial" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("1_8sx38")
script = ExtResource("2_1t1cb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Name" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Project Name"

[node name="CreatedAt" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "2025/01/02T12:34:55"

[node name="UpdatedAt" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "2025/01/02T12:34:55"

[connection signal="pressed" from="VBoxContainer/Name" to="." method="_on_name_pressed"]
